Don't consider about: and data: as cross origin downloads

Bug: 730050
Change-Id: Ia11ab0e17995339fa2a620837a0bbb29b789512a